--- a/README.adoc
+++ b/README.adoc
@@ -7,6 +7,9 @@
 
 * *Topic 1:* Transaction
 ** -> GDPR (filter personal details)
+**  -> Custom Partitioning with StreamPartitioner	http://kafka.apache.org/10/javadoc/org/apache/kafka/streams/processor/StreamPartitioner.html
+     If you’ve modified or changed keys and you don’t need a custom partition strategy, you can rely on the DefaultPartitioner of the internal Kafka Streams KafkaProducer to handle the partitioning. But if you’d like to apply your own partitioning approach, you can use StreamPartitioner.
+
 *** -> Rewards Poings --> period (size)
 *** -> Fraud --> period (time)
 *** -> Credit Scoring --> period (time & size)
@@ -18,6 +21,16 @@
 
 * *Topic 2:* Products STATE
 ** -> ??
+
+Additionally:
+Think Industry
+Think Channel (mobile, web, in-person)
+Think Merchent
+
+
+Consider Technical 
+- Splitting Stream (Chapter 2 or 3)
+- Aggregation & Windowing (Chapter 5)
 
 == Goals
 
