--- a/README.adoc
+++ b/README.adoc
@@ -57,7 +57,11 @@ image:images/OCP-CEP-Architecture-Option-2-RealTime.png["In Stream Realtime CEP"
 image:images/OCP-CEP-Architecture-Option-1-Micro-Batching.png["Micro-Batching CEP",height=356] 
 
 == Pre-Requisites
-* TBD (Raif please add scripts and instructions on this doc for AWS OCP setup) link:https://github.com/skoussou/streaming-cep/blob/master/README-Setup-KAFKA-Cluster.adoc[Perform OCP Setup]
+
+=== OCP Installation/Configuration
+* [red yellow-background]*TBD (Raif please add scripts and instructions on this doc for AWS OCP setup)*  link:https://github.com/skoussou/streaming-cep/blob/master/README-Setup-KAFKA-Cluster.adoc[Perform OCP Setup]
+
+=== KAFKA OCP Installation/Configuration
 * link:https://github.com/skoussou/streaming-cep/blob/master/README-Setup-KAFKA-Cluster.adoc[Ephemeral - KAFKA Cluster Configuration]
 * link:https://github.com/skoussou/streaming-cep/blob/master/README-Setup-Persistent-KAFKA-Cluster.adoc[Ephemeral - KAFKA Cluster Configuration]
 *
