--- a/README.adoc
+++ b/README.adoc
@@ -60,6 +60,12 @@ image:images/OCP-CEP-Architecture-Option-1-Micro-Batching.png["Micro-Batching CE
 
 === OCP Installation/Configuration
 
+just text
+
+[red]#red text# [yellow-background]#on yellow#
+[big]#large# [red yellow-background big]*all bold*
+
+
 [red yellow-background]*TBD (Raif please add scripts and instructions on this doc for AWS OCP setup)*  link:https://github.com/skoussou/streaming-cep/blob/master/README-Setup-KAFKA-Cluster.adoc[Perform OCP Setup]
 
 === KAFKA OCP Installation/Configuration
