--- a/README-Setup-Persistent-KAFKA-Cluster.adoc
+++ b/README-Setup-Persistent-KAFKA-Cluster.adoc
@@ -3,40 +3,40 @@
 
 == Configure OCP Cluster Environment 
 
-[red yellow-background]*TBD*
+*TBD*
 
 === Local - Start OpenShift cluster
 
-[red yellow-background]*TBD*
+*TBD*
 
 === AWS - Start OpenShift cluster
 
-[red yellow-background]*TBD*
+*TBD*
 
 == Configure KAFKA Cluster Environment on OCP
 
 === Download Strimzi and extract it
 
-[red yellow-background]*TBD*
+*TBD*
 
 === Install the cluster operator and strimzi templates
 
-[red yellow-background]*TBD*
+*TBD*
 
 
 ==== Deploy an persistent KAFKA cluster. 
 
-[red yellow-background]*TBD*
+*TBD*
 
 
 ==== Configure/Tune Persistent Cluster [A MUST]
 
-[red yellow-background]*TBD*
+*TBD*
 
 
 ==== Update Cluster [OPTIONAL]
 
-[red yellow-background]*TBD*
+*TBD*
 
 
 ==== Monitor Cluster [A MUST]
